Part of #167, changes Local contstructor