@@ -34,7 +34,7 @@ import java.util.Set;
 public class Lang {
 	private static final String UI_BASE = "Langs.UserInterface";
 	private static ResourceBundle UiBundle = ResourceBundle.getBundle(UI_BASE);
-	private static ResourceBundle defaultUiBundle = ResourceBundle.getBundle(UI_BASE, new Locale(""));
+	private static ResourceBundle defaultUiBundle = ResourceBundle.getBundle(UI_BASE, Locale.of(""));
 
 	public static String getUI(String msg) {
 		try {
